@@ -1375,6 +1375,13 @@ do_reload()
   sudo killall -9 fbi >/dev/null 2>/dev/null
   sudo killall rptr >/dev/null 2>/dev/null
 
+  # Check that the config file is in unix format, convert if not
+  dos2unix < "$CONFIGFILE" | cmp - "$CONFIGFILE" >/dev/null 2>/dev/null
+  if [ $? != 0 ]; then
+    dos2unix "$CONFIGFILE" >/dev/null 2>/dev/null
+  fi
+
+
   # Put up the Start-up Splash Screen, which will be killed by the repeater process
   sudo fbi -T 1 -noverbose -a /home/pi/atv-rptr/media/starting_up.jpg >/dev/null 2>/dev/null
 
